# pywalfox-native

./: Cargo.toml
src/: cli.rs  config.rs  daemon.rs  install.rs  main.rs  native_messaging.rs  themes.rs
