[package]
name = "pywalfox-native"
version = "0.1.0"
edition = "2021"
authors = ["Pywalfox Contributors"]
description = "Linux-only Rust native messaging host for Pywalfox (Firefox)"
license = "MIT"
rust-version = "1.89.0"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
directories = "6.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tracing-appender = "0.2.3"
